# zecwallet-light-cli

./: .gitignore  Cargo.toml  Earthfile  HOWTO.md  Makefile  NOTES.md  PROMPT.md  README.md  rustfmt.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: configure.rs  lib.rs  main.rs  utils.rs  version.rs
docker/: Dockerfile
lib/: Cargo.toml
lib/src/: commands.rs  compact_formats.rs  compacting.rs  grpc_connector.rs  lib.rs  lightclient.rs  lightwallet.rs  utils.rs
lib/src/blaze/: block_witness_data.rs  fetch_compact_blocks.rs  fetch_full_tx.rs  fetch_taddr_txns.rs  sync_status.rs  syncdata.rs  test_utils.rs  trial_decryptions.rs  update_notes.rs
lib/src/commands/: address.rs  balance.rs  clear.rs  decrypt.rs  decrypt_message.rs  default_fee.rs  encrypt.rs  encrypt_message.rs  encryption_status.rs  export.rs  get_option.rs  height.rs  help.rs  import.rs  info.rs  last_tx_id.rs  lock.rs  mod.rs  new_address.rs  notes.rs  quit.rs  rescan.rs  save.rs  seed.rs  send.rs  send_progress.rs  set_option.rs  shield.rs  sync.rs  sync_status.rs  transactions.rs  unlock.rs  zecprice.rs
lib/src/grpc/: extensions.rs  mod.rs  types.rs
lib/src/lightclient/: checkpoints.rs  config.rs  faketx.rs  lightclient_config.rs  mod.rs  test_server.rs  test_utils.rs  tests.rs
lib/src/lightclient/blaze/: block_witness_data.rs  fetch_compact_blocks.rs  fetch_full_tx.rs  fetch_taddr_txns.rs  fixed_size_buffer.rs  mod.rs  sync_data.rs  sync_status.rs  syncdata.rs  test_utils.rs  trial_decryptions.rs  update_notes.rs
lib/src/lightwallet/: data.rs  extended_key.rs  keys.rs  lightwallet.rs  message.rs  mod.rs  options.rs  send_progress.rs  tests.rs  utils.rs  wallet.rs  wallet_txns.rs  walletokey.rs  wallettkey.rs  walletzkey.rs
lib/src/lightwallet/data/: blockdata.rs  message.rs  mod.rs  notes.rs  options.rs  outgoingtx.rs  price.rs  utils.rs  utxo.rs  wallettx.rs  wallettxs.rs  witnesscache.rs
lib/src/lightwallet/keys/: adapters.rs  builders.rs  extended_key.rs  in_memory.rs  keystores.rs  ledger.rs  mod.rs  txbuilder.rs  utils.rs
lib/src/lightwallet/keys/data/: mod.rs  okey.rs  tkey.rs  zkey.rs
lib/src/lightwallet/keys/in_memory/: builder.rs  mod.rs
lib/src/lightwallet/keys/ledger/: mod.rs
lib/src/lightwallet/walletkeys/: mod.rs  wallettkey.rs  walletzkey.rs
