[package]
name = "zecwalletlitelib"
version = "0.2.0"
authors = ["Aditya Kulkarni <adityapk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embed_params", "ledger-support"]
hsm-compat = ["zcash-hsmbuilder"]
ledger-support = [
    "hsm-compat",
    "ledger-zcash",
    "ledger-transport-hid",
    "ledger-transport",
    "zx-bip44",
    "bytemuck"]
embed_params = []

[dependencies]
arr_macro = "0.2"
base64 = "0.13"
bytes = "0.4"
log4rs = "1.2.0"
rand = "0.8.5"
http = "0.2.4"
tonic = {version = "0.7.2", features = ["tls", "tls-roots"]}
prost = "0.10"
tokio =  { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
tokio-rustls = "0.23.4"
futures = "0.3.21"
log = "0.4.14"
hmac = "0.11"
hex = "0.4"
dirs = "3"
json = "0.12.4"
webpki-roots = "0.21.0"
async-trait = "0.1"

lazy_static = "1.4.0"
secp256k1 = "=0.21.3"
ripemd160 = "0.9"
sha2 = "0.9"
base58 = "0.2"
tiny-bip39 = "1"
sodiumoxide = "0.2"
byteorder = "1"
thiserror = "1.0"
cfg-if = "1.0.0"

pairing = "0.22"
ff = "0.12"
jubjub = "0.9.0"
bls12_381 = "0.7"
group = "0.12"

rust-embed = { version = "6.3", features = ["debug-embed"] }

orchard = "0.2"
incrementalmerkletree = "0.3"

zcash_address = "0.1"
zcash_primitives = { version = "0.7", features = ["transparent-inputs"] }
zcash_client_backend = "0.5"
zcash_proofs = { version = "0.7",  features = ["multicore"] }
zcash_encoding = "0.1"
zcash_note_encryption = { version = "0.1", features = ["pre-zip-212"] }

# zcash-hsmbuilder = { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "324a0851113df4ea77457b5711392beabd021407", default-features = false, features = ["zecwallet-compat"], optional = true }
# ledger-zcash = { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "324a0851113df4ea77457b5711392beabd021407", default-features = false, features = ["zecwallet-compat"], optional = true }

zcash-hsmbuilder = { path = "../../ledger-zcash-rs/zcash-hsmbuilder", optional = true }
ledger-zcash = { path = "../../ledger-zcash-rs/ledger-zcash", optional = true }

ledger-transport-hid = { version = "0.9", optional = true }
ledger-transport = { version = "0.9", optional = true }
zx-bip44 = { version = "0.1.0", optional = true }
bytemuck = { version = "1.15", optional = true }
derive_more = "0.99.17"
tap = "1.0.1"

[dev-dependencies]
portpicker = "0.1.1"
tempdir = "0.3.7"

[build-dependencies]
tonic-build = "0.7"
