[package]
name = "zecwalletlitelib"
version = "1.0.0"
authors = [
    "Aditya Kulkarni <adityapk@gmail.com>",
    "Zondax AG <hello@zondax.ch>"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embed_params", "ledger-support"]
hsm-compat = ["zcash-hsmbuilder"]
ledger-support = [
    "hsm-compat",
    "ledger-zcash",
    "ledger-transport-hid",
    "ledger-transport",
    "zx-bip44",
    "bytemuck"]
embed_params = []

[dependencies]
arr_macro = "0.2"
base64 = "0.22"
bytes = "1.6"
log4rs = "1.3"
rand = "0.8.5"
http = "0.2.4"
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }
prost = "0.10"
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
tokio-rustls = "0.23.4"
futures = "0.3"
log = "0.4"
hmac = "0.11"
hex = "0.4"
dirs = "5"
json = "0.12"
webpki-roots = "0.26"
async-trait = "0.1"

lazy_static = "1.4"
secp256k1 = "=0.21.3"
ripemd160 = "0.9"
sha2 = "0.9"
base58 = "0.2"
tiny-bip39 = "1"
sodiumoxide = "0.2"
byteorder = "1"
thiserror = "1"
cfg-if = "1.0"

pairing = "0.23"
ff = "0.12"
jubjub = "0.10"
bls12_381 = "0.8"
group = "0.12"

rust-embed = { version = "8", features = ["debug-embed"] }

orchard = "0.3"
incrementalmerkletree = "0.3"

zcash_address = "=0.2.0"
zcash_primitives = { version = "^0.10.2", features = ["transparent-inputs"] }
zcash_client_backend = "0.7"
zcash_proofs = { version = "0.10",  features = ["multicore"] }
zcash_encoding = "0.2"
zcash_note_encryption = { version = "0.3", features = ["pre-zip-212"] }

# zcash-hsmbuilder = { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "324a0851113df4ea77457b5711392beabd021407", default-features = false, features = ["zecwallet-compat"], optional = true }
# ledger-zcash = { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "324a0851113df4ea77457b5711392beabd021407", default-features = false, features = ["zecwallet-compat"], optional = true }

zcash-hsmbuilder = { path = "../../ledger-zcash-rs/zcash-hsmbuilder", optional = true }
ledger-zcash = { path = "../../ledger-zcash-rs/ledger-zcash", optional = true }

ledger-transport-hid = { version = "0.9", optional = true }
ledger-transport = { version = "0.9", optional = true }
zx-bip44 = { version = "0.1", optional = true }
bytemuck = { version = "1.15", optional = true }
derive_more = "0.99"
tap = "1.0"

[dev-dependencies]
portpicker = "0.1"
tempdir = "0.3"

[build-dependencies]
tonic-build = "0.7"
